--- a/styles/sudoku.css
+++ b/styles/sudoku.css
@@ -7,7 +7,9 @@ td {
     border: 1px solid #000;
     text-align: center;
 }
-
+td:hover{
+    background-color: #fbe0a8;
+}
 td:nth-of-type(3n) {
     border-right: 3px solid black !important;
 }
