--- a/styles/sudoku.css
+++ b/styles/sudoku.css
@@ -125,6 +125,19 @@ hr {
     width: 20px;
 }
 
+.undoButton {
+    width: 44px;
+    height: 44px;
+    border: 0;
+    background: none;
+    box-shadow: none;
+    border-radius: 0px;
+}
+
+.undoButton:hover {
+    background-color: #f2f2f2;
+}
+
 .borderDiv {
     display: flex;
     border-collapse: collapse;
