--- a/styles/sudoku.css
+++ b/styles/sudoku.css
@@ -1,14 +1,22 @@
 html,
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    margin: 0px 0px 50px 0px;
+    font-family: Arial, Helvetica, sans-serif !important;
+    text-align: center !important;
+    margin: 0px 0px 50px 0px !important;
     /* height: 100vh; */
+}
+
+*,
+::after,
+::before {
+    box-sizing: unset !important;
 }
 
 hr {
     width: 500px;
 }
+
+
 
 #errors {
     color: coral;
@@ -30,16 +38,18 @@ hr {
 }
 
 .tile {
-    width: 48px;
-    height: 48px;
-    border: .5px solid #888888;
-
+    width: 48px !important;
+    height: 48px !important;
+    border: .5px solid #888888 !important;
+    flex-basis: auto !important;
+    flex-grow: 0 !important;
+    flex-shrink: auto !important;
     /* Text */
-    font-size: 20px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 20px !important;
+    font-weight: bold !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
 }
 
 .tile:hover {
@@ -84,41 +94,55 @@ hr {
 }
 
 .number {
-    width: 44px;
-    height: 44px;
-    border-left: 1px solid black;
+    align-items: center;
+    background-color: #f5f5f5;
+    border-radius: 0px !important;
+    display: none;
+    font-size: none;
+    height: none;
+    justify-content: none;
+    margin-right: 0px !important;
+    min-width: 0px !important;
+    padding: 0px !important;
+    text-align: none;
+    vertical-align: none;
+
+    width: 44px !important;
+    height: 44px !important;
+    border-left: 1px solid black !important;
 
     /* Text */
-    font-size: 20px;
-    font-weight: bold;
-    display: flex;
+    font-size: 20px !important;
+    font-weight: bold !important;
+    display: flex !important;
     justify-content: center;
-    align-items: center;
+    align-items: center !important;
+    background-color: white !important;
 
 }
 
 .number:hover {
-    background-color: #f2f2f2
+    background-color: #f2f2f2 !important;
 }
 
 .number:nth-child(1) {
-    border-left: none;
+    border-left: none !important;
 }
 
 .number-selected {
-    background-color: gray;
+    background-color: gray !important;
 }
 
 .tile-start {
-    background-color: white;
+    background-color: white !important;
 }
 
 .horizontal-line {
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid black !important;
 }
 
 .vertical-line {
-    border-right: 1px solid black;
+    border-right: 1px solid black !important;
 }
 
 .undoImage {
@@ -186,4 +210,18 @@ hr {
     -moz-transform: scale(0.5);
     -ms-transform: scale(0.5);
     transform: scale(0.5);
+}
+
+#navBar {
+    background-color: #333 !important;
+    overflow: hidden;
+    width: 100%;
+    height: 50px;
+    margin: 0;
+    border: 0px;
+}
+
+.bulma {
+    @import "bulma/sass/utilities/_all.sass"
+    @import "bulma/sass/grid/columns.sass"
 }
